--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,107 @@
+/*css loader styles*/
+.loading-screen {
+    position: fixed;
+    z-index: 999;
+    width: 100%;
+    height: 100%;
+    background: white;
+    color: black;
+    display: var(--loader-display);
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.lds-dual-ring {
+    display: inline-block;
+    padding-bottom: 1em;
+    width: 80px;
+    height: 80px;
+}
+.lds-dual-ring:after {
+    content: " ";
+    display: block;
+    width: 64px;
+    height: 64px;
+    margin: 8px;
+    border-radius: 50%;
+    border: 6px solid #0069ed;
+    border-color: #0069ed transparent #fff transparent;
+    animation: lds-dual-ring 1.2s linear infinite;
+}
+@keyframes lds-dual-ring {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+}
+
+/*app styles*/
 .App {
-  text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.menu {
+    width:35%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.logo {
+    width: 50%;
+    padding-bottom: 1em;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.canvas {
+    border-radius: 0.5em;
+    z-index: 99;
+    position: relative;
 }
 
-.App-link {
-  color: #61dafb;
+.webcam {
+    border-radius: 0.5em;
+    position: absolute;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.posture-status::after {
+    content: var(--posture-status);
+    color: var(--posture-status-color);
+}
+
+.btn {
+    font-size: 1em;
+    display: inline-block;
+    border: none;
+    padding: 0.75em 1.5em;
+    margin: 0;
+    text-decoration: none;
+    background: var(--btn-color);
+    color: #ffffff;
+    cursor: pointer;
+    text-align: center;
+    border-radius: 0.25em;
+}
+
+/*responsiveness*/
+@media (max-width: 1000px) {
+    .App {
+        flex-direction: column-reverse;
+        height: auto;
+        padding: 1.5em 0;
+    }
+
+    .menu {
+        width:640px;
+        padding-top: 1em;
+    }
+
+    .logo {
+        width: 25%;
+        padding-bottom: 0.25em;
+    }
 }
