--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+:root {
+  --loader-display: flex;
+  --btn-color: rgba(0, 105, 237, 1);
+  --posture-status: "UNKNOWN";
+  --posture-status-color: black;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
